# RusVox

./: README.md  main.py  pyproject.toml
rusvox/: __init__.py  dataset.py  evaluate.py  interfaces.py  text_corrector.py
