[project]
name = "rusvox"
version = "0.1.0"
description = "Утилита для оценки ASR моделей на русском языке для Russian ASR Leaderboard."
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "datasets==3.6.0",
    "jiwer>=4.0.0",
    "librosa>=0.11.0",
    "soundfile>=0.13.1",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.0",
]
